# plutus-script-reexecutor

./: .gitignore  CODEOWNERS  README.md  cabal.project  datum.json  flake.nix  my_script.json  plutus-script-reexecutor.cabal  schema.sql  scripts.yaml
.github/workflows/: ci.yml
app/: App.hs  Options.hs
dev-local/: Export.hs  Main.hs  Populate.hs  README.md  main  policy.plutus  process-compose.yaml  watch-metrics.sh
docs/: Weekly updates.md  specification.md
docs/adr/: 2025-11-25_002-initial-design.md  2025-12-23_003-sqlite.md  2026-02-23_004-node-leashing.md
lib/: Lib.hs
lib/PSR/: Chain.hs  ConfigMap.hs  ContextBuilder.hs  Evaluation.hs  Events.hs  HTTP.hs  Metrics.hs  Streaming.hs  Types.hs
lib/PSR/Evaluation/: Api.hs  Ledger.hs
lib/PSR/Events/: Interface.hs
lib/PSR/HTTP/: API.hs  Server.hs
lib/PSR/HTTP/WebSocket/: Events.hs
lib/PSR/Logging/: LogBase.hs
lib/PSR/Storage/: Interface.hs  SQLite.hs
lib/PSR/Storage/SQLite/: GetEvents.hs  Instances.hs
lib/PSR/Websocket/: Server.hs
nix/: project.nix  shell.nix
onchain/: onchain.cabal
onchain/src/Onchain/: Compiled.h  Escrow.hs  Simple.hs
onchain/src/Onchain/V2/: Escrow.hs  Simple.hs
onchain/src/Onchain/V3/: Compiled.h  Debug.hs  Release.hs  ShowBS.hs  Simple.hs
