cabal-version: 3.4
name:          plutus-script-reexecutor
version:       0.1.0.0
license:       MIT
build-type:    Simple

common lang
  default-language:   Haskell2010
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DuplicateRecordFields
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NamedFieldPuns
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    PolyKinds
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

library
  import:          lang
  hs-source-dirs:  lib
  exposed-modules:
    PSR.Chain
    PSR.ConfigMap
    PSR.ContextBuilder
    PSR.Evaluation.Api
    PSR.Evaluation.Ledger
    PSR.Events
    PSR.Events.Interface
    PSR.HTTP
    PSR.HTTP.API
    PSR.HTTP.Server
    PSR.HTTP.WebSocket.Events
    PSR.Storage.Interface
    PSR.Storage.SQLite
    PSR.Streaming
    PSR.Types

  build-depends:
    , aeson
    , base                         >=4.9 && <5
    , bytestring
    , cardano-api
    , cardano-data
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-slotting
    , containers
    , data-default
    , memory
    , microlens
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-network-protocols
    , plutus-ledger-api
    , pretty-simple
    , prometheus-client
    , prometheus-metrics-ghc
    , servant
    , servant-queryparam-core
    , servant-queryparam-server
    , servant-server
    , servant-websockets
    , sqlite-simple
    , stm
    , streamly
    , streamly-core
    , text
    , time
    , transformers
    , wai
    , wai-middleware-prometheus
    , warp
    , websockets
    , yaml

executable plutus-script-reexecutor
  import:         lang
  main-is:        App.hs
  other-modules:  Options
  hs-source-dirs: app
  build-depends:
    , async
    , base                      >=4.9 && <5
    , bytestring
    , cardano-api
    , containers
    , optparse-applicative
    , plutus-script-reexecutor
    , pretty-simple
    , stm
    , streamly
    , streamly-core
    , warp
    , yaml

-- TODO: Move this into a separate package
executable dev-local
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: dev-local
  other-modules:
    Export
    Populate

  build-depends:
    , base
    , bytestring
    , cardano-api
    , directory
    , filepath
    , onchain
    , optparse-applicative
    , plutus-ledger-api
    , plutus-tx
    , serialise
    , streamly-core
    , streamly-process

benchmark bench
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Bench.hs
  hs-source-dirs: bench
  build-depends:
    , base                      >=4.9 && <5
    , plutus-script-reexecutor

test-suite test
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Test.hs
  hs-source-dirs: test
  build-depends:
    , base                      >=4.9 && <5
    , plutus-script-reexecutor
