cabal-version:      3.4
name:               plutus-script-reexecutor
version:            0.1.0.0
license:            MIT
build-type:         Simple
extra-source-files: schema.sql

common lang
  default-language:   Haskell2010
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages

  default-extensions:
    BangPatterns
    BlockArguments
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NamedFieldPuns
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    PolyKinds
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

library
  import:          lang
  hs-source-dirs:  lib
  exposed-modules:
    PSR.Chain
    PSR.ConfigMap
    PSR.ContextBuilder
    PSR.Evaluation
    PSR.Evaluation.Api
    PSR.Evaluation.Ledger
    PSR.Events
    PSR.Events.FileLogger
    PSR.Events.Interface
    PSR.HTTP
    PSR.HTTP.API
    PSR.HTTP.Server
    PSR.HTTP.WebSocket.Events
    PSR.Metrics
    PSR.Storage.Interface
    PSR.Storage.SQLite
    PSR.Storage.SQLite.GetEvents
    PSR.Storage.SQLite.Instances
    PSR.Storage.SQLite.Metrics
    PSR.Storage.SQLite.Utils
    PSR.Streaming
    PSR.Types

  build-depends:
    , aeson
    , base                         >=4.9 && <5
    , bytestring
    , cardano-api
    , cardano-data
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-binary
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-slotting
    , containers
    , data-default
    , directory
    , file-embed
    , filepath
    , microlens
    , ordered-containers
    , ouroboros-consensus-cardano
    , ouroboros-network-protocols
    , plutus-ledger-api
    , prometheus-client
    , prometheus-metrics-ghc
    , resource-pool
    , serialise
    , servant-queryparam-core
    , servant-queryparam-server
    , servant-server
    , servant-websockets
    , sqlite-simple
    , stm
    , streamly
    , streamly-core
    , template-haskell
    , text
    , time
    , transformers
    , wai-middleware-prometheus
    , warp
    , websockets
    , yaml

executable plutus-script-reexecutor
  import:         lang
  main-is:        App.hs
  other-modules:  Options
  ghc-options:    -rtsopts -Wall -threaded -with-rtsopts=-T -Werror
  hs-source-dirs: app
  build-depends:
    , async
    , base                         >=4.9 && <5
    , cardano-api
    , optparse-applicative
    , ouroboros-network-protocols
    , plutus-script-reexecutor
    , streamly-core
    , warp

-- TODO: Move this into a separate package
executable dev-local
  import:         lang
  main-is:        Main.hs
  hs-source-dirs: dev-local
  other-modules:
    Export
    Populate

  build-depends:
    , base
    , cardano-api
    , filepath
    , onchain
    , optparse-applicative
    , plutus-ledger-api
    , streamly-core
    , streamly-process
    , time

-- benchmark bench
--   import:         lang
--   type:           exitcode-stdio-1.0
--   main-is:        Bench.hs
--   hs-source-dirs: bench
--   build-depends:
--     , base                      >=4.9 && <5
--     , plutus-script-reexecutor

-- test-suite test
--   import:         lang
--   type:           exitcode-stdio-1.0
--   main-is:        Test.hs
--   hs-source-dirs: test
--   build-depends:
--     , base                      >=4.9 && <5
--     , plutus-script-reexecutor
